--- a/css/pages__login.css
+++ b/css/pages__login.css
@@ -15,6 +15,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background: linear-gradient(to bottom, #69959b, #ffffff);
 }
 
 header {
@@ -39,6 +40,8 @@ nav a {
     border-radius: 8px;
     display: grid;
     grid-gap: 15px;
+    background: linear-gradient(to bottom, #349fad, #ffffff);
+    
 }
 .home{
     text-decoration: none;
@@ -71,6 +74,7 @@ h1 {
 form {
     display: grid;
     grid-gap: 10px;
+    
     
 }
 
